k8s/overlays/leocloud/mealplan/patch-backend-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealplan-backend
spec:
  template:
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 1Gi
