k8s/overlays/leocloud/mealplan/patch-frontend-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealplan-frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
