k8s/overlays/leocloud/mealplan/patch-postgres-resources.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealplan-postgres
spec:
  template:
    spec:
      containers:
        - name: postgres
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
