k8s/overlays/leocloud/mealplan/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealplan
spec:
  ingressClassName: nginx
  rules:
    - host: if200166.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mealplan-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealplan-frontend
                port:
                  number: 80
